--- a/etudiants.html
+++ b/etudiants.html
@@ -66,7 +66,7 @@
 
             <div class="nav-links">
                 <ul>
-                    <li><a href="/accueil.html" class="not_link_style">Accueil</a></li>
+                    <li><a href="/index.html" class="not_link_style">Accueil</a></li>
                     <li><a href="/association.html" class="not_link_style" bis_skin_checked="1">L'association</a></li>
                     <li><a href="/classements.html" class="not_link_style" bis_skin_checked="1">Classements</a></li>
                     <li><a href="/actus.html" class="not_link_style" bis_skin_checked="1">Nos actus</a></li>
