--- a/association.html
+++ b/association.html
@@ -75,11 +75,11 @@
 
             <div class="nav-links">
                 <ul>
-                    <li><a href="/index.html" class="not_link_style">Accueil</a></li>
+                    <li><a href="/bdsiutsn.github.io/index.html" class="not_link_style">Accueil</a></li>
                     <li><a href="#top" class="not_link_style" bis_skin_checked="1">L'association</a></li>
-                    <li><a href="/classements.html" class="not_link_style" bis_skin_checked="1">Classements</a></li>
-                    <li><a href="/actus.html" class="not_link_style" bis_skin_checked="1">Nos actus</a></li>
-                    <li><a href="/etudiants.html" class="not_link_style" bis_skin_checked="1">Etudiants</a></li>
+                    <li><a href="/bdsiutsn.github.io/classements.html" class="not_link_style" bis_skin_checked="1">Classements</a></li>
+                    <li><a href="/bdsiutsn.github.io/actus.html" class="not_link_style" bis_skin_checked="1">Nos actus</a></li>
+                    <li><a href="/bdsiutsn.github.io/etudiants.html" class="not_link_style" bis_skin_checked="1">Etudiants</a></li>
                 </ul>
             </div>
         </nav>
