--- a/etudiants.html
+++ b/etudiants.html
@@ -95,10 +95,10 @@
                 <td>19</td>
             </tr>
             <tr>
-                <td>Emily VANTOMME</td>
-                <td>BABTOUTEAM</td>
-                <td>TC1</td>
-                <td>19</td>
+                <td>nom</td>
+                <td>nom</td>
+                <td>promo</td>
+                <td>0</td>
             </tr>
         </tbody>
     </table>
