--- a/classements.html
+++ b/classements.html
@@ -49,7 +49,7 @@
     </script>
 
     <header>
-        <h1 class="logo">BDS</h1>
+        <h1 class="logo" href="#top">BDS</h1>
         <img src="./img/bds.png" class="bdslogo"> </img>
         <nav class="nav-area">
             <button aria-label="toggle menu" id="responsiveMenuToggleButton">
