--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <link href="./table/jquery-ui.css" rel="stylesheet" />
 
     <header>
-        <h1 class="logo">BDS</h1>
+        <h1 class="logo" href="#top">BDS</h1>
         <img src="./img/bds.png" class="bdslogo"> </img>
         <nav class="nav-area">
             <button aria-label="toggle menu" id="responsiveMenuToggleButton">
