--- a/classements/equipes.html
+++ b/classements/equipes.html
@@ -2,27 +2,28 @@
 <html lang="fr">
 
 <head>
-    <script src="./table/jquery-1.9.1.js"></script>
-    <script src="./table/jquery-ui.js"></script>
-    <script src="./app.js" defer></script>
-    <script src="./table/jquery.dataTables.min.js"></script>
-    <script src="./table/dataTables.responsive.js"></script>
-    <link href="./table/dataTables.responsive.css" rel="stylesheet" />
-    <link href="./table/jquery.dataTables.css" rel="stylesheet" />
-    <link href="./table/jquery-ui.js" rel="stylesheet" />
-    <link href="/style.css" rel="stylesheet" />
+    <script src="../table/jquery-1.9.1.js"></script>
+    <script src="../table/jquery-ui.js"></script>
+    <script src="../app.js" defer></script>
+    <script src="../table/jquery.dataTables.min.js"></script>
+    <script src="../table/dataTables.responsive.js"></script>
+    <link href="../table/dataTables.responsive.css" rel="stylesheet" />
+    <link href="../table/jquery.dataTables.css" rel="stylesheet" />
+    <link href="../table/jquery-ui.js" rel="stylesheet" />
+    <link href="../style.css" rel="stylesheet" />
+
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" type="text/css" href="./style.css">
-    <link rel="shortcut icon" href="./img/bds.png">
+    <link rel="shortcut icon" href="../img/bds.png">
 
     <meta name="fragment" content="!">
     <meta http-equiv="content-language" content="fr">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 
-    <title>BDS - Etudiants</title>
+    <title>BDS - Equipes</title>
     <meta name="description" content="">
 
     <meta name="author" content="Bureau des Sports IUT Saint-Nazaire">
@@ -35,6 +36,8 @@
     <meta name="og:image" content="">
     <meta name="og:image:width" content="">
     <meta name="og:image:height" content="">
+
+
 </head>
 
 <body>
@@ -51,7 +54,7 @@
     <header id="nav-menu" aria-label="navigation bar">
         <div class="container">
             <a class="logo" href="/">
-                <img src="/img/bds.png" width="60" height="60" alt="Inc Logo" />
+                <img src="../img/bds.png" width="60" height="60" alt="Inc Logo" />
             </a>
             <div class="nav-start">
                 <nav class="menu">
@@ -67,7 +70,7 @@
                             <div id="dropdown2" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/classements/equipes.html">Classements des
+                                        <a class="dropdown-link" href="#top">Classements des
                                             équipes</a>
                                     </li>
                                     <li role="menuitem">
@@ -78,7 +81,7 @@
                             </div>
                         </li>
                         <li><a class="nav-link" href="/actus.html">Nos actus</a></li>
-                        <li><a class="nav-link" href="#top">Etudiants</a></li>
+                        <li><a class="nav-link" href="/etudiants.html">Etudiants</a></li>
                     </ul>
                 </nav>
             </div>
@@ -97,121 +100,27 @@
 
     <!-- Page markup: Not important -->
     <main style="padding: 1.5rem; margin: 0 auto; max-width: 1300px">
-        <h1>Liste des étudiants inscrit dans une équipe :</h1>
+        <h1>Classements des équipes inscrites :</h1>
         <br><br>
         <br><br>
         <table id="example" class="display" cellspacing="0" width="100%">
             <thead>
                 <tr>
-                    <th>Prénom - Nom</th>
-                    <th>Equipe</th>
-                    <th>Promotion</th>
-                    <th>Age</th>
+                    <th>Nom d'équipe</th>
+                    <th>Points</th>
+                    <th>Membres</th>
+                    <th>Participations</th>
+                    <th>Capitaine</th>
                 </tr>
             </thead>
 
             <tbody>
                 <tr>
-                    <td>Brahim DUTRAND</td>
-                    <td>TRUNEAU</td>
-                    <td>MLT2</td>
-                    <td>19</td>
-                </tr>
-                <tr>
                     <td>nom</td>
-                    <td>TRUNEAU</td>
-                    <td>MLT1</td>
-                    <td>19</td>
-                </tr>
-                <tr>
-                    <td>nom</td>
-                    <td>TRUNEAU</td>
-                    <td>MLT1</td>
-                    <td>18</td>
-                </tr>
-                <tr>
-                    <td>nom</td>
-                    <td>TRUNEAU</td>
-                    <td>MLT2</td>
-                    <td>20</td>
-                </tr>
-                <tr>
-                    <td>nom</td>
-                    <td>nom</td>
-                    <td>promo</td>
                     <td>0</td>
-                </tr>
-                <tr>
-                    <td>nom</td>
-                    <td>nom</td>
-                    <td>promo</td>
                     <td>0</td>
-                </tr>
-                <tr>
-                    <td>nom</td>
-                    <td>nom</td>
-                    <td>promo</td>
                     <td>0</td>
-                </tr>
-                <tr>
                     <td>nom</td>
-                    <td>nom</td>
-                    <td>promo</td>
-                    <td>0</td>
-                </tr>
-                <tr>
-                    <td>nom</td>
-                    <td>nom</td>
-                    <td>promo</td>
-                    <td>0</td>
-                </tr>
-                <tr>
-                    <td>nom</td>
-                    <td>nom</td>
-                    <td>promo</td>
-                    <td>0</td>
-                </tr>
-                <tr>
-                    <td>nom</td>
-                    <td>nom</td>
-                    <td>promo</td>
-                    <td>0</td>
-                </tr>
-                <tr>
-                    <td>nom</td>
-                    <td>nom</td>
-                    <td>promo</td>
-                    <td>0</td>
-                </tr>
-                <tr>
-                    <td>nom</td>
-                    <td>nom</td>
-                    <td>promo</td>
-                    <td>0</td>
-                </tr>
-                <tr>
-                    <td>nom</td>
-                    <td>nom</td>
-                    <td>promo</td>
-                    <td>0</td>
-                </tr>
-                <tr>
-                    <td>nom</td>
-                    <td>nom</td>
-                    <td>promo</td>
-                    <td>0</td>
-                </tr>
-                <tr>
-                    <td>nom</td>
-                    <td>nom</td>
-                    <td>promo</td>
-                    <td>0</td>
-                </tr>
-                <tr>
-                    <td>nom</td>
-                    <td>nom</td>
-                    <td>promo</td>
-                    <td>0</td>
                 </tr>
             </tbody>
         </table>
