--- a/association.html
+++ b/association.html
@@ -43,7 +43,7 @@
     <header id="nav-menu" aria-label="navigation bar">
         <div class="container">
             <a class="logo" href="/">
-                <img src="/img/bds.png" width="60" height="60" alt="Inc Logo" />
+                <img src="./img/bds.png" width="60" height="60" alt="Inc Logo" />
             </a>
             <div class="nav-start">
                 <nav class="menu">
