--- a/classements/equipes.html
+++ b/classements/equipes.html
@@ -10,13 +10,12 @@
     <link href="../table/dataTables.responsive.css" rel="stylesheet" />
     <link href="../table/jquery.dataTables.css" rel="stylesheet" />
     <link href="../table/jquery-ui.js" rel="stylesheet" />
-    <link href="../style.css" rel="stylesheet" />
 
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="stylesheet" type="text/css" href="../style.css">
     <link rel="shortcut icon" href="../img/bds.png">
 
     <meta name="fragment" content="!">
@@ -59,8 +58,8 @@
             <div class="nav-start">
                 <nav class="menu">
                     <ul class="menu-bar">
-                        <li><a class="nav-link" href="/index.html">Accueil</a></li>
-                        <li><a class="nav-link" href="/association.html">L'association</a></li>
+                        <li><a class="nav-link" href="/bdsiutsn.github.io/index.html">Accueil</a></li>
+                        <li><a class="nav-link" href="/bdsiutsn.github.io/association.html">L'association</a></li>
                         <li>
                             <button class="nav-link dropdown-btn" data-dropdown="dropdown2" aria-haspopup="true"
                                 aria-expanded="false" aria-label="discover">
@@ -74,14 +73,14 @@
                                             équipes</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/classements/promo.html">Classements des
+                                        <a class="dropdown-link" href="/bdsiutsn.github.io/classements/promo.html">Classements des
                                             promotions</a>
                                     </li>
                                 </ul>
                             </div>
                         </li>
-                        <li><a class="nav-link" href="/actus.html">Nos actus</a></li>
-                        <li><a class="nav-link" href="/etudiants.html">Etudiants</a></li>
+                        <li><a class="nav-link" href="/bdsiutsn.github.io/actus.html">Nos actus</a></li>
+                        <li><a class="nav-link" href="/bdsiutsn.github.io/etudiants.html">Etudiants</a></li>
                     </ul>
                 </nav>
             </div>
