--- a/etudiants.html
+++ b/etudiants.html
@@ -10,7 +10,6 @@
     <link href="./table/dataTables.responsive.css" rel="stylesheet" />
     <link href="./table/jquery.dataTables.css" rel="stylesheet" />
     <link href="./table/jquery-ui.js" rel="stylesheet" />
-    <link href="/style.css" rel="stylesheet" />
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -77,7 +76,7 @@
                                 </ul>
                             </div>
                         </li>
-                        <li><a class="nav-link" href="/actus.html">Nos actus</a></li>
+                        <li><a class="nav-link" href="/bdsiutsn.github.io/actus.html">Nos actus</a></li>
                         <li><a class="nav-link" href="#top">Etudiants</a></li>
                     </ul>
                 </nav>
