--- a/association.html
+++ b/association.html
@@ -10,7 +10,6 @@
 <link href="./table/dataTables.responsive.css" rel="stylesheet" />
 <link href="./table/jquery.dataTables.css" rel="stylesheet" />
 <link href="./table/jquery-ui.js" rel="stylesheet" />
-<link href="/style.css" rel="stylesheet" />
 
 <head>
     <meta charset="UTF-8">
@@ -43,7 +42,7 @@
     <header id="nav-menu" aria-label="navigation bar">
         <div class="container">
             <a class="logo" href="/">
-                <img src="./img/bds.png" width="60" height="60" alt="Inc Logo" />
+                <img src="/img/bds.png" width="60" height="60" alt="Inc Logo" />
             </a>
             <div class="nav-start">
                 <nav class="menu">
