--- a/classements/equipes.html
+++ b/classements/equipes.html
@@ -58,8 +58,8 @@
             <div class="nav-start">
                 <nav class="menu">
                     <ul class="menu-bar">
-                        <li><a class="nav-link" href="/bdsiutsn.github.io/index.html">Accueil</a></li>
-                        <li><a class="nav-link" href="/bdsiutsn.github.io/association.html">L'association</a></li>
+                        <li><a class="nav-link" href="/bdsiutsn/index.html">Accueil</a></li>
+                        <li><a class="nav-link" href="/bdsiutsn/association.html">L'association</a></li>
                         <li>
                             <button class="nav-link dropdown-btn" data-dropdown="dropdown2" aria-haspopup="true"
                                 aria-expanded="false" aria-label="discover">
@@ -73,14 +73,14 @@
                                             équipes</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/bdsiutsn.github.io/classements/promo.html">Classements des
+                                        <a class="dropdown-link" href="/bdsiutsn/classements/promo.html">Classements des
                                             promotions</a>
                                     </li>
                                 </ul>
                             </div>
                         </li>
-                        <li><a class="nav-link" href="/bdsiutsn.github.io/actus.html">Nos actus</a></li>
-                        <li><a class="nav-link" href="/bdsiutsn.github.io/etudiants.html">Etudiants</a></li>
+                        <li><a class="nav-link" href="/bdsiutsn/actus.html">Nos actus</a></li>
+                        <li><a class="nav-link" href="/bdsiutsn/etudiants.html">Etudiants</a></li>
                     </ul>
                 </nav>
             </div>
