--- a/association.html
+++ b/association.html
@@ -42,12 +42,12 @@
     <header id="nav-menu" aria-label="navigation bar">
         <div class="container">
             <a class="logo" href="/">
-                <img src="/img/bds.png" width="60" height="60" alt="Inc Logo" />
+                <img src="./img/bds.png" width="60" height="60" alt="Inc Logo" />
             </a>
             <div class="nav-start">
                 <nav class="menu">
                     <ul class="menu-bar">
-                        <li><a class="nav-link" href="/index.html">Accueil</a></li>
+                        <li><a class="nav-link" href="/bdsiutsn/index.html">Accueil</a></li>
                         <li><a class="nav-link" href="#top">L'association</a></li>
                         <li>
                             <button class="nav-link dropdown-btn" data-dropdown="dropdown2" aria-haspopup="true"
@@ -58,18 +58,18 @@
                             <div id="dropdown2" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/classements/equipes.html">Classements des
+                                        <a class="dropdown-link" href="/bdsiutsn/classements/equipes.html">Classements des
                                             équipes</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/classements/promo.html">Classements des
+                                        <a class="dropdown-link" href="/bdsiutsn/classements/promo.html">Classements des
                                             promotions</a>
                                     </li>
                                 </ul>
                             </div>
                         </li>
-                        <li><a class="nav-link" href="/actus.html">Nos actus</a></li>
-                        <li><a class="nav-link" href="/etudiants.html">Etudiants</a></li>
+                        <li><a class="nav-link" href="/bdsiutsn/actus.html">Nos actus</a></li>
+                        <li><a class="nav-link" href="/bdsiutsn/etudiants.html">Etudiants</a></li>
                     </ul>
                 </nav>
             </div>
