--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <nav class="menu">
                     <ul class="menu-bar">
                         <li><a class="nav-link" href="#top">Accueil</a></li>
-                        <li><a class="nav-link" href="/bdsiutsn.github.io/association.html">L'association</a></li>
+                        <li><a class="nav-link" href="/bdsiutsn/association.html">L'association</a></li>
                         <li>
                             <button class="nav-link dropdown-btn" data-dropdown="dropdown2" aria-haspopup="true"
                                 aria-expanded="false" aria-label="discover">
@@ -57,18 +57,18 @@
                             <div id="dropdown2" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/bdsiutsn.github.io/classements/equipes.html">Classements des
+                                        <a class="dropdown-link" href="/bdsiutsn/classements/equipes.html">Classements des
                                             équipes</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/bdsiutsn.github.io/classements/promo.html">Classements des
+                                        <a class="dropdown-link" href="/bdsiutsn/classements/promo.html">Classements des
                                             promotions</a>
                                     </li>
                                 </ul>
                             </div>
                         </li>
-                        <li><a class="nav-link" href="/bdsiutsn.github.io/actus.html">Nos actus</a></li>
-                        <li><a class="nav-link" href="/bdsiutsn.github.io/etudiants.html">Etudiants</a></li>
+                        <li><a class="nav-link" href="/bdsiutsn/actus.html">Nos actus</a></li>
+                        <li><a class="nav-link" href="/bdsiutsn/etudiants.html">Etudiants</a></li>
                     </ul>
                 </nav>
             </div>
