--- a/association.html
+++ b/association.html
@@ -41,7 +41,7 @@
 <body>
     <header id="nav-menu" aria-label="navigation bar">
         <div class="container">
-            <a class="logo" href="/">
+            <a class="logo" href="/bdsiutsn/index.html">
                 <img src="./img/bds.png" width="60" height="60" alt="Inc Logo" />
             </a>
             <div class="nav-start">
