--- a/actualites.html
+++ b/actualites.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" type="text/css" href="./style.css">
-    <link rel="shortcut icon" href="./img/bds.png">
+    <link rel="shortcut icon" href="./img/bds-logo-shark.png">
 
     <meta name="fragment" content="!">
     <meta http-equiv="content-language" content="fr">
@@ -42,13 +42,12 @@
     <header id="nav-menu" aria-label="navigation bar">
         <div class="container">
             <a class="logo" href="/bdsiutsn/index.html">
-                <img src="./img/bds.png" width="60" height="60" alt="Inc Logo" />
+                <img src="./img/bds-logo-shark.png" width="60" height="60" alt="Inc Logo" />
             </a>
             <div class="nav-start">
                 <nav class="menu">
                     <ul class="menu-bar">
                         <li><a class="nav-link" href="/bdsiutsn/index.html">Accueil</a></li>
-                        <li><a class="nav-link" href="/bdsiutsn/association.html">L'association</a></li>
                         <li>
                             <button class="nav-link dropdown-btn" data-dropdown="dropdown2" aria-haspopup="true"
                                 aria-expanded="false" aria-label="discover">
@@ -62,7 +61,7 @@
                                             équipes</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/bdsiutsn/classements/promo.html">Classements des
+                                        <a class="dropdown-link" href="/bdsiutsn/classements/promotion.html">Classements des
                                             promotions</a>
                                     </li>
                                 </ul>
@@ -86,7 +85,6 @@
         </div>
     </header>
 
-    <!-- Page markup: Not important -->
     <main style="padding: 1.5rem; margin: 0 auto; max-width: 1300px">
     </main>
 </body>
