--- a/classements/promotion.html
+++ b/classements/promotion.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" type="text/css" href="../style.css">
-    <link rel="shortcut icon" href="../img/bds.png">
+    <link rel="shortcut icon" href="../img/bds-logo-shark.png">
 
     <meta name="fragment" content="!">
     <meta http-equiv="content-language" content="fr">
