--- a/etudiants.html
+++ b/etudiants.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" type="text/css" href="./style.css">
-    <link rel="shortcut icon" href="./img/bds.png">
+    <link rel="shortcut icon" href="./img/bds-logo-shark.png">
 
     <meta name="fragment" content="!">
     <meta http-equiv="content-language" content="fr">
@@ -50,13 +50,12 @@
     <header id="nav-menu" aria-label="navigation bar">
         <div class="container">
             <a class="logo" href="/bdsiutsn/index.html">
-                <img src="./img/bds.png" width="60" height="60" alt="Inc Logo" />
+                <img src="./img/bds-logo-shark.png" width="60" height="60" alt="Inc Logo" />
             </a>
             <div class="nav-start">
                 <nav class="menu">
                     <ul class="menu-bar">
                         <li><a class="nav-link" href="/bdsiutsn/index.html">Accueil</a></li>
-                        <li><a class="nav-link" href="/bdsiutsn/association.html">L'association</a></li>
                         <li>
                             <button class="nav-link dropdown-btn" data-dropdown="dropdown2" aria-haspopup="true"
                                 aria-expanded="false" aria-label="discover">
@@ -70,13 +69,13 @@
                                             équipes</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/bdsiutsn/classements/promo.html">Classements des
+                                        <a class="dropdown-link" href="/bdsiutsn/classements/promotion.html">Classements des
                                             promotions</a>
                                     </li>
                                 </ul>
                             </div>
                         </li>
-                        <li><a class="nav-link" href="/bdsiutsn/actus.html">Nos actus</a></li>
+                        <li><a class="nav-link" href="/bdsiutsn/actualites.html">Nos actus</a></li>
                         <li><a class="nav-link" href="#top">Etudiants</a></li>
                     </ul>
                 </nav>
@@ -94,7 +93,6 @@
         </div>
     </header>
 
-    <!-- Page markup: Not important -->
     <main style="padding: 1.5rem; margin: 0 auto; max-width: 1300px">
         <h1>Liste des étudiants inscrit dans une équipe :</h1>
         <br><br>
