--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
         <h1>Bureau des Sports</h1>
         <h2>Nos missions</h2>
     </main>
+
+    <footer>
+        <img src="/img//ico-linkedin.svg" alt="">
+    </footer>
 </body>
 
 </html>
