--- a/index.html
+++ b/index.html
@@ -56,11 +56,13 @@
                             <div id="dropdown2" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/bdsiutsn/classements/equipes.html">Classements des
+                                        <a class="dropdown-link" href="/bdsiutsn/classements/equipes.html">Classements
+                                            des
                                             équipes</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/bdsiutsn/classements/promotion.html">Classements des
+                                        <a class="dropdown-link" href="/bdsiutsn/classements/promotion.html">Classements
+                                            des
                                             promotions</a>
                                     </li>
                                 </ul>
@@ -84,14 +86,36 @@
         </div>
     </header>
 
-    <main style="padding: 1.5rem; margin: 0 auto; max-width: 1300px">
-        <h1>Bureau des Sports</h1>
-        <h2>Nos missions</h2>
+    <main style="padding: 1.5rem; margin: 0 auto; max-width: 1100px">
+        <h1>Bienvenue sur le site du Bureau des Sports de l'IUT de Saint-Nazaire !</h1>
+        <br></br>
+        <div class="missions">
+            <h2>Missions</h2>
+            <li>
+                Informer les étudiants des possibilités offertes par l’IUT de Saint-Nazaire pour la pratique de plus
+                de
+                20 activités physiques et sportives proposées par la <a class="missions-suaps"
+                    href="https://iut-sn.univ-nantes.fr/vie-etudiante/activites-sportives-a-liut"
+                    target=”_blank”>SUAPS</a>
+            </li>
+            <li>
+                Dynamiser la vie sportive des étudiants des différents campus de Saint-Nazaire via
+                l'organisation
+                d'évènements
+                sportifs tout au long de l'année.
+            </li>
+        </div>
+        <br></br>
+        <div class="presentation">
+            <h2>Présentation</h2>
+            <h3>Le BDS favorise la pratique de nombreux sports sur le campus en organisant divers événements sportifs
+                comme
+                l'événement d'intégration de début d'année. L'association favorise la cohésion d'équipe et l'esprit de
+                groupe. Des valeurs qui s’appliquent aussi bien dans le cadre de la
+                compétition que dans sa vie professionnelle.
+            </h3>
+        </div>
     </main>
-
-    <footer>
-        <img src="/img//ico-linkedin.svg" alt="">
-    </footer>
 </body>
 
 </html>
