--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 de
                 20 activités physiques et sportives proposées par la <a class="missions-suaps"
                     href="https://iut-sn.univ-nantes.fr/vie-etudiante/activites-sportives-a-liut"
-                    target=”_blank”>SUAPS</a>
+                    target=”_blank”>SUAPS</a>,
             </li>
             <li>
                 Dynamiser la vie sportive des étudiants des différents campus de Saint-Nazaire via
