--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
         <br></br>
         <div class="missions">
             <h2>Missions</h2>
-            <li>
+            <li style="text-indent: 25px;">
                 Informer les étudiants des possibilités offertes par l’IUT de Saint-Nazaire pour la pratique de plus
                 de
                 20 activités physiques et sportives proposées par la <a class="missions-suaps"
                     href="https://iut-sn.univ-nantes.fr/vie-etudiante/activites-sportives-a-liut"
                     target=”_blank”>SUAPS</a>,
             </li>
-            <li>
+            <li style="text-indent: 25px;">
                 Dynamiser la vie sportive des étudiants des différents campus de Saint-Nazaire via
                 l'organisation
                 d'évènements
@@ -108,7 +108,7 @@
         <br></br>
         <div class="presentation">
             <h2>Présentation</h2>
-            <h3>Le BDS favorise la pratique de nombreux sports sur le campus en organisant divers événements sportifs
+            <h3> Le BDS favorise la pratique de nombreux sports sur le campus en organisant divers événements sportifs
                 comme
                 l'événement d'intégration de début d'année. L'association favorise la cohésion d'équipe et l'esprit de
                 groupe. Des valeurs qui s’appliquent aussi bien dans le cadre de la
