--- a/classements/equipes.html
+++ b/classements/equipes.html
@@ -10,6 +10,8 @@
     <link href="../table/dataTables.responsive.css" rel="stylesheet" />
     <link href="../table/jquery.dataTables.css" rel="stylesheet" />
     <link href="../table/jquery-ui.js" rel="stylesheet" />
+    <link href="/footer.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
     <meta charset="UTF-8">
@@ -122,6 +124,19 @@
             </tbody>
         </table>
     </main>
+
+    <footer class="footer-distributed">
+        <div class="footer-right">
+            <a href="mailto:bds.iutsn.contact@gmail.com" target=”_blank”><i class="fa fa-envelope"></i></a>
+            <a href="https://www.instagram.com/bds.iut.sn/" target=”_blank”><i class="fa fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/company/bds-iut-sn/about/" target=”_blank”><i class="fa fa-linkedin"></i></a>
+        </div>
+
+        <div class="footer-left">
+            <p>Site du Bureau des Sports de Saint-Nazaire créé par Stéfan CORLAY</p>
+        </div>
+
+    </footer>
 </body>
 
 </html>
