--- a/classements/equipes.html
+++ b/classements/equipes.html
@@ -10,7 +10,7 @@
     <link href="../table/dataTables.responsive.css" rel="stylesheet" />
     <link href="../table/jquery.dataTables.css" rel="stylesheet" />
     <link href="../table/jquery-ui.js" rel="stylesheet" />
-    <link href="/footer.css" rel="stylesheet" />
+    <link href="../footer.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
