--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         </div>
 
         <div class="footer-left">
-            <p>Site du Bureau des Sports de Saint-Nazaire créé par Stéfan CORLAY</p>
+            <p>Site du Bureau des Sports de l'IUT de Saint-Nazaire créé par Stéfan CORLAY</p>
         </div>
 
     </footer>
