--- a/etudiants.html
+++ b/etudiants.html
@@ -115,6 +115,18 @@
                     <td>-</td>
                     <td>0</td>
                 </tr>
+                <tr>
+                    <td>Stéfan CORLAY</td>
+                    <td>BABTOUTEAM</td>
+                    <td>MLT2</td>
+                    <td>20</td>
+                </tr>
+                <tr>
+                    <td>Bourhene arab?</td>
+                    <td>ARABITEAM</td>
+                    <td>MPSI</td>
+                    <td>19</td>
+                </tr>
             </tbody>
         </table>
     </main>
