--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                             </div>
                         </li>
                         <li><a class="nav-link" href="/bdsiutsn/etudiants.html">Etudiants</a></li>
+                        <li><a class="nav-link" href="/bdsiutsn/contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -88,8 +89,11 @@
     </header>
 
     <main style="padding: 1.5rem; margin: 0 auto; max-width: 1100px">
+
         <h1>Bienvenue sur le site du Bureau des Sports de l'IUT de Saint-Nazaire !</h1>
+
         <br></br>
+
         <div class="missions">
             <h2>Missions</h2>
             <li style="text-indent: 25px;">
@@ -106,7 +110,9 @@
                 sportifs tout au long de l'année.
             </li>
         </div>
+
         <br></br>
+
         <div class="presentation">
             <h2>Présentation</h2>
             <h3> Le BDS favorise la pratique de nombreux sports sur le campus en organisant divers événements sportifs
@@ -119,7 +125,8 @@
 
         <br></br>
         <br></br>
-        <div class="instagram-widget">
+
+        <!--<div class="instagram-widget">
             <div class="instagram-widget1">
                 <blockquote class="instagram-media" data-instgrm-captioned
                     data-instgrm-permalink="https://www.instagram.com/p/CiukSn4LQ5E/?utm_source=ig_embed&amp;utm_campaign=loading"
@@ -309,9 +316,8 @@
                 </blockquote>
                 <script async src="//www.instagram.com/embed.js"></script>
             </div>
-        </div>
-
-
+        </div>-->
+        
     </main>
 
     <footer class="footer-distributed">
