--- a/contact.html
+++ b/contact.html
@@ -2,29 +2,28 @@
 <html lang="fr">
 
 <head>
-    <script src="../table/jquery-1.9.1.js"></script>
-    <script src="../table/jquery-ui.js"></script>
-    <script src="../app.js" defer></script>
-    <script src="../table/jquery.dataTables.min.js"></script>
-    <script src="../table/dataTables.responsive.js"></script>
-    <link href="../table/dataTables.responsive.css" rel="stylesheet" />
-    <link href="../table/jquery.dataTables.css" rel="stylesheet" />
-    <link href="../table/jquery-ui.js" rel="stylesheet" />
-    <link href="../footer.css" rel="stylesheet" />
+    <script src="./table/jquery-1.9.1.js"></script>
+    <script src="./table/jquery-ui.js"></script>
+    <script src="./app.js" defer></script>
+    <script src="./table/jquery.dataTables.min.js"></script>
+    <script src="./table/dataTables.responsive.js"></script>
+    <link href="./table/dataTables.responsive.css" rel="stylesheet" />
+    <link href="./table/jquery.dataTables.css" rel="stylesheet" />
+    <link href="./table/jquery-ui.js" />
+    <link href="./footer.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" type="text/css" href="../style.css">
-    <link rel="shortcut icon" href="../img/bds-logo-shark.png">
+    <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="shortcut icon" href="./img/bds-logo-shark.png">
 
     <meta name="fragment" content="!">
     <meta http-equiv="content-language" content="fr">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 
-    <title>BDS - Equipes</title>
+    <title>BDS - Accueil</title>
     <meta name="description" content="">
 
     <meta name="author" content="Bureau des Sports IUT Saint-Nazaire">
@@ -38,24 +37,13 @@
     <meta name="og:image:width" content="">
     <meta name="og:image:height" content="">
 
-
 </head>
 
 <body>
-    <script type="text/javascript" charset="utf-8">
-        $(document).ready(function () {
-            $('#example').DataTable({
-                responsive: true,
-                pagingType: "simple",
-                pageLength: 10
-            })
-        });
-    </script>
-
     <header id="nav-menu" aria-label="navigation bar">
         <div class="container">
             <a class="logo" href="/bdsiutsn/index.html">
-                <img src="../img/bds-logo-shark.png" width="60" height="60" alt="Inc Logo" />
+                <img src="./img/bds-logo-shark.png" width="60" height="60" alt="Inc Logo" />
             </a>
             <div class="nav-start">
                 <nav class="menu">
@@ -70,18 +58,20 @@
                             <div id="dropdown2" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="#top">Classements des
+                                        <a class="dropdown-link" href="/bdsiutsn/classements/equipes.html">Classements
+                                            des
                                             équipes</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/bdsiutsn/classements/promotion.html">Classements des
+                                        <a class="dropdown-link" href="/bdsiutsn/classements/promotion.html">Classements
+                                            des
                                             promotions</a>
                                     </li>
                                 </ul>
                             </div>
                         </li>
                         <li><a class="nav-link" href="/bdsiutsn/etudiants.html">Etudiants</a></li>
-                        <li><a class="nav-link" href="/bdsiutsn/contact.html">Contact</a></li>
+                        <li><a class="nav-link" href="/bdsiutsn/#top">Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -99,43 +89,32 @@
     </header>
 
     <main style="padding: 1.5rem; margin: 0 auto; max-width: 1100px">
-        <h1>Classements des équipes inscrites :</h1>
-        <br><br>
-        <br><br>
-        <table id="example" class="display" cellspacing="0" width="100%">
-            <thead>
-                <tr>
-                    <th>Nom d'équipe</th>
-                    <th>Points</th>
-                    <th>Membres</th>
-                    <th>Participations</th>
-                    <th>Capitaine</th>
-                </tr>
-            </thead>
-
-            <tbody>
-                <tr>
-                    <td>-</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td>-</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="containers">
+            <div class="title">
+                <h3>Une question ? Un conseil ?</h3>
+            </div>
+            <form action="#" method="post">
+                <input type="text" name="name" placeholder="Entrez votre nom" required="">
+                <input type="email" name="email" placeholder="Entrez votre email" required="">
+                <input type="text" name="subject" placeholder="Entrez le sujet" required="">
+                <input type="text" name="number" placeholder="Entrez votre numéro de téléphone" required="">
+                <textarea name="message" placeholder="Entrez votre message" required=""></textarea>
+                <button type="submit">Envoyer</button>
+            </form>
+        </div>
     </main>
 
     <footer class="footer-distributed">
         <div class="footer-right">
             <a href="mailto:bds.iutsn.contact@gmail.com" target=”_blank”><i class="fa fa-envelope"></i></a>
             <a href="https://www.instagram.com/bds.iut.sn/" target=”_blank”><i class="fa fa-instagram"></i></a>
-            <a href="https://www.linkedin.com/company/bds-iut-sn/about/" target=”_blank”><i class="fa fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/company/bds-iut-sn/about/" target=”_blank”><i
+                    class="fa fa-linkedin"></i></a>
         </div>
 
         <div class="footer-left">
             <p>Site du Bureau des Sports de l'IUT de Saint-Nazaire créé par Stéfan CORLAY</p>
         </div>
-
 
     </footer>
 </body>
