--- a/etudiants.html
+++ b/etudiants.html
@@ -78,6 +78,7 @@
                             </div>
                         </li>
                         <li><a class="nav-link" href="#top">Etudiants</a></li>
+                        <li><a class="nav-link" href="/bdsiutsn/contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </div>
