--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
                             </div>
                         </li>
                         <li><a class="nav-link" href="/bdsiutsn/etudiants.html">Etudiants</a></li>
-                        <li><a class="nav-link" href="/bdsiutsn/#top">Contact</a></li>
+                        <li><a class="nav-link" href="#top">Contact</a></li>
                     </ul>
                 </nav>
             </div>
