--- a/etudiants.html
+++ b/etudiants.html
@@ -77,7 +77,7 @@
                                 </ul>
                             </div>
                         </li>
-                        <li><a class="nav-link" href="#top">Etudiants</a></li>
+                        <li><a class="nav-link" href="/etudiants.html#top">Etudiants</a></li>
                         <li><a class="nav-link" href="/bdsiutsn/contact.html">Contact</a></li>
                     </ul>
                 </nav>
