--- a/classements/promotion.html
+++ b/classements/promotion.html
@@ -10,13 +10,13 @@
     <link href="../table/dataTables.responsive.css" rel="stylesheet" />
     <link href="../table/jquery.dataTables.css" rel="stylesheet" />
     <link href="../table/jquery-ui.js" rel="stylesheet" />
-    <link href="../footer.css" rel="stylesheet" />
+    <link href="../css/footer.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" type="text/css" href="../style.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
     <link rel="shortcut icon" href="../img/bds-logo-shark.png">
 
     <meta name="fragment" content="!">
