--- a/classements/promotion.html
+++ b/classements/promotion.html
@@ -92,8 +92,8 @@
     <footer class="footer-distributed">
         <div class="footer-right">
             <a href="mailto:bds.iutsn.contact@gmail.com" target=”_blank”><i class="fa fa-envelope"></i></a>
-            <a href="https://www.instagram.com/bds.iut.sn/" target=”_blank”><i class="fa fa-instagram"></i></a>
-            <a href="https://www.linkedin.com/company/bds-iut-sn/about/" target=”_blank”><i class="fa fa-linkedin"></i></a>
+            <a href="./bdsiutsn/social/instagram.html" target=”_blank”><i class="fa fa-instagram"></i></a>
+            <a href="./bdsiutsn/social/linkedin.html" target=”_blank”><i class="fa fa-linkedin"></i></a>
         </div>
 
         <div class="footer-left">
