--- a/classements/equipes.html
+++ b/classements/equipes.html
@@ -54,7 +54,7 @@
 
     <header id="nav-menu" aria-label="navigation bar">
         <div class="container">
-            <a class="logo" href="../bdsiutsn/index.html">
+            <a class="logo" href="/bdsiutsn/index.html">
                 <img src="../img/bds-logo-shark.png" width="60" height="60" alt="Inc Logo" />
             </a>
             <div class="nav-start">
@@ -127,8 +127,8 @@
     <footer class="footer-distributed">
         <div class="footer-right">
             <a href="mailto:bds.iutsn.contact@gmail.com" target=”_blank”><i class="fa fa-envelope"></i></a>
-            <a href="../bdsiutsn/social/instagram.html" target=”_blank”><i class="fa fa-instagram"></i></a>
-            <a href="../bdsiutsn/social/linkedin.html" target=”_blank”><i class="fa fa-linkedin"></i></a>
+            <a href="/bdsiutsn/social/instagram.html" target=”_blank”><i class="fa fa-instagram"></i></a>
+            <a href="/bdsiutsn/social/linkedin.html" target=”_blank”><i class="fa fa-linkedin"></i></a>
         </div>
 
         <div class="footer-left">
